# credit_card_fraud_detection

./: .gitignore  README.md  pipeline.py  pyproject.toml
app/: app.py
models/: DecisionTree.pkl  LogisticRegression.pkl  XGBoost.pkl  best_thresholds.json  scaler.pkl
poredjenje_rezultata/: poredjenje.txt  uporedi.py
poredjenje_rezultata/18_atributa/metrics/: model_comparison.txt  threshold_payoff_test.txt  tuning_results.txt  validation_selection.txt
poredjenje_rezultata/main/metrics/: error_analysis.txt  model_comparison.txt  rang_lista_atributa.txt  threshold_optimization.txt  threshold_payoff_test.txt
results/metrics/: duplicate_analysis.txt  eda_summary.txt  error_analysis.txt  model_comparison.txt  overfitting_check.txt  rang_lista_atributa.txt  threshold_optimization.txt  threshold_payoff_test.txt  tuning_results.txt  validation_selection.txt
src/: data_preparation.py  duplicate_analysis.py  eda_analysis.py  error_analysis.py  evaluate.py  feature_selection.py  train.py
