[project]
name = "credit-card-fraud-detection"
version = "0.1.0"
description = "Detekcija zloupotrebe kreditnih kartica - binarna klasifikacija"
requires-python = ">=3.12"
dependencies = [
    "pandas>=3.0.3",
    "numpy>=2.4.6",
    "scikit-learn>=1.9.0",
    "imbalanced-learn>=0.14.2",
    "matplotlib>=3.10.9",
    "seaborn>=0.13.2",
    "xgboost>=3.2.0",
    "streamlit>=1.58.0",
    "joblib",
]
